overflow fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: $scroll-padding-top;
+  max-width: 100vw;
 }
 
 body {
@@ -11,4 +12,8 @@ body {
   min-height: 100vh;
   font-family: $font-primary;
   background: var(--bg-color);
+}
+
+#app {
+  overflow-x: hidden;
 }
